; ModuleID = '/home/carl/AnghaBench/linux/net/bluetooth/rfcomm/extr_core.c_rfcomm_dlc_exists.c'
source_filename = "/home/carl/AnghaBench/linux/net/bluetooth/rfcomm/extr_core.c_rfcomm_dlc_exists.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rfcomm_dlc = type { i32 }
%struct.rfcomm_session = type { i32 }

@EINVAL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.rfcomm_dlc* @rfcomm_dlc_exists(i32* %0, i32* %1, i32 %2) #0 {
  %4 = alloca %struct.rfcomm_dlc*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca %struct.rfcomm_session*, align 8
  %9 = alloca %struct.rfcomm_dlc*, align 8
  %10 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32 %2, i32* %7, align 4
  store %struct.rfcomm_dlc* null, %struct.rfcomm_dlc** %9, align 8
  %11 = load i32, i32* %7, align 4
  %12 = call i64 @rfcomm_check_channel(i32 %11)
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %18

14:                                               ; preds = %3
  %15 = load i32, i32* @EINVAL, align 4
  %16 = sub nsw i32 0, %15
  %17 = call %struct.rfcomm_dlc* @ERR_PTR(i32 %16)
  store %struct.rfcomm_dlc* %17, %struct.rfcomm_dlc** %4, align 8
  br label %36

18:                                               ; preds = %3
  %19 = call i32 (...) @rfcomm_lock()
  %20 = load i32*, i32** %5, align 8
  %21 = load i32*, i32** %6, align 8
  %22 = call %struct.rfcomm_session* @rfcomm_session_get(i32* %20, i32* %21)
  store %struct.rfcomm_session* %22, %struct.rfcomm_session** %8, align 8
  %23 = load %struct.rfcomm_session*, %struct.rfcomm_session** %8, align 8
  %24 = icmp ne %struct.rfcomm_session* %23, null
  br i1 %24, label %25, label %33

25:                                               ; preds = %18
  %26 = load %struct.rfcomm_session*, %struct.rfcomm_session** %8, align 8
  %27 = call i32 @__session_dir(%struct.rfcomm_session* %26)
  %28 = load i32, i32* %7, align 4
  %29 = call i32 @__dlci(i32 %27, i32 %28)
  store i32 %29, i32* %10, align 4
  %30 = load %struct.rfcomm_session*, %struct.rfcomm_session** %8, align 8
  %31 = load i32, i32* %10, align 4
  %32 = call %struct.rfcomm_dlc* @rfcomm_dlc_get(%struct.rfcomm_session* %30, i32 %31)
  store %struct.rfcomm_dlc* %32, %struct.rfcomm_dlc** %9, align 8
  br label %33

33:                                               ; preds = %25, %18
  %34 = call i32 (...) @rfcomm_unlock()
  %35 = load %struct.rfcomm_dlc*, %struct.rfcomm_dlc** %9, align 8
  store %struct.rfcomm_dlc* %35, %struct.rfcomm_dlc** %4, align 8
  br label %36

36:                                               ; preds = %33, %14
  %37 = load %struct.rfcomm_dlc*, %struct.rfcomm_dlc** %4, align 8
  ret %struct.rfcomm_dlc* %37
}

declare dso_local i64 @rfcomm_check_channel(i32) #1

declare dso_local %struct.rfcomm_dlc* @ERR_PTR(i32) #1

declare dso_local i32 @rfcomm_lock(...) #1

declare dso_local %struct.rfcomm_session* @rfcomm_session_get(i32*, i32*) #1

declare dso_local i32 @__dlci(i32, i32) #1

declare dso_local i32 @__session_dir(%struct.rfcomm_session*) #1

declare dso_local %struct.rfcomm_dlc* @rfcomm_dlc_get(%struct.rfcomm_session*, i32) #1

declare dso_local i32 @rfcomm_unlock(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
